fix height alignment in 'My Projects'

--- a/src/components/MyProjects/MyProjects.css
+++ b/src/components/MyProjects/MyProjects.css
@@ -25,6 +25,8 @@
     height: 300px;
     display: flex;
     flex-direction: column;
+    /* border: 1px solid black; */
+    justify-content: center;
 }
 
 .info {
@@ -32,7 +34,7 @@
 }
 
 .image {
-    justify-content: center;
+    /* justify-content: center; */
 }
 
 .flip {
@@ -78,7 +80,7 @@ img {
 /*========================= 'Grow' ====================== */
 
 .hvr-grow {
-    display: inline-block;
+    display: flex;
     vertical-align: middle;
     -webkit-transform: perspective(1px) translateZ(0);
     transform: perspective(1px) translateZ(0);
